refator: 简历头像更新，内容更新

--- a/resume/index.html
+++ b/resume/index.html
@@ -1,106 +1,158 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
+
 <head>
 	<meta charset="UTF-8">
 	<title>my-resume</title>
-	<link rel="stylesheet"  href="./css/normalize.css">
-	<link rel="stylesheet"  href="./css/iconfont.css">
-	<link rel="stylesheet"  href="./css/style_c.css">
+	<link rel="stylesheet" href="./css/normalize.css">
+	<link rel="stylesheet" href="./css/iconfont.css">
+	<link rel="stylesheet" href="./css/style_c.css">
 </head>
+
 <body>
 	<div class="layout clearfix">
 		<div class="aside">
-		    <div class="header">
-		    	<h1>RESUME</h1>
-			    <img src="./images/hicon.jpg">
-			    <h2>赖文斌</h2>
-			    <p>求职意向：web 前端开发</p>
-		    </div>
+			<div class="header">
+				<h1>RESUME</h1>
+				<div class="avatar-box">
+					<img src="./images/logo.png">
+				</div>
+				<h2>赖文斌</h2>
+				<p>求职意向：web 前端开发</p>
+			</div>
 			<div class="content">
 				<div class="information">
-					<div class="adorn"><h2 class="iconfontyyy icon-xinxi">基本信息</h2></div>
-					<span class="xinxi-title">学历：</span><span>大专</span>
-					<span class="xinxi-title">年龄：</span><span>22</span>
-					<span class="xinxi-title">专业：</span><span>计算机应用技术</span>
-					<span class="xinxi-title">Github: </span><span>
-                    <a href="https://github.com/XSnowHoly" target="_blank">https://github.com/XSnowHoly</a>
-                    </span>
-                    <span class="xinxi-title">个人博客: </span><span>
-                    <a href="http://www.jianshu.com/u/6072afe3db37" target="_blank">简书地址</a>
-                    </span>
-                    <div class="quick-mark">
-                        <span class="xinxi-title">博客二维码: </span>
-                        <span>
-                            <embed class="qr-code" src="images/my-jianshu.svg" type="">
-                        </span>
-                    </div>             
+					<div class="adorn">
+						<h2 class="iconfontyyy icon-xinxi">基本信息</h2>
+					</div>
+					<span class="xinxi-title">学历：</span>
+					<span>大专</span>
+					<span class="xinxi-title">年龄：</span>
+					<span>22</span>
+					<span class="xinxi-title">专业：</span>
+					<span>计算机应用技术</span>
+					<span class="xinxi-title">Github: </span>
+					<span>
+						<a href="https://github.com/XSnowHoly" target="_blank">https://github.com/XSnowHoly</a>
+					</span>
+					<span class="xinxi-title">个人博客: </span>
+					<span>
+						<a href="http://www.jianshu.com/u/6072afe3db37" target="_blank">简书地址</a>
+					</span>
+					<div class="quick-mark">
+						<span class="xinxi-title">博客二维码: </span>
+						<span>
+							<embed class="qr-code" src="images/my-jianshu.svg" type="">
+						</span>
+					</div>
 				</div>
 				<div class="contact">
-					<div class="adorn"><h2 class="iconfontyyy icon-contact">联系方式</h2></div>
+					<div class="adorn">
+						<h2 class="iconfontyyy icon-contact">联系方式</h2>
+					</div>
 					<span class="iconfontyyy icon-phone">13250281210</span>
 					<span class="iconfontyyy icon-youxiang">495904127@qq.com</span>
 					<span class="iconfontyyy icon-weixin-copy">SkyBin666</span>
-					<span class="iconfontyyy icon-address">广州市南沙区</span>
+					<span class="iconfontyyy icon-address">广州市荔湾区</span>
 				</div>
 				<div class="hobby clearfix">
-					<div class="adorn"><h2 class="iconfontyyy icon-techangaihao">主修课程</h2></div>
+					<div class="adorn">
+						<h2 class="iconfontyyy icon-techangaihao">主修课程</h2>
+					</div>
 					<ul class="course clearfix">
 						<li>C语言</li>
 						<li>PS图像处理</li>
-                        <li>HTML + CSS</li>
-                        <li>JavaScript</li>
-                        <li>计算机网络基础</li>
+						<li>HTML + CSS</li>
+						<li>JavaScript</li>
+						<li>计算机网络基础</li>
 						<li>MySql数据库</li>
 						<li>PHP程序设计</li>
-                        <li>Linux操作系统</li>
+						<li>Linux操作系统</li>
 					</ul>
 				</div>
 			</div>
 		</div>
-        <div class="main">
-            <div class="self-assessment">
-                <h3 class="iconfontyyy icon-evaluate">自我评价</h3>
-                <span>乐观开朗，积极向上。学习能力强，喜欢挑战，喜欢接受新事物，具有责任心，和团队
-意识，具有良好的沟通能力。热爱前端。</span>
-            </div>
-        	<div class="work">
-        		<h3 class="iconfontyyy icon-gongzuo">工作经验</h3>
-        		<h4>前端开发</h4>
-        		<h4>广州铭扬影视传媒公司</h4>
-        		<span>2016-08~2017-06</span>
-        		<span>公司官网前端开发和后台维护</span>
-        	</div>
-        	<div class="skill">
-        		<h3 class="iconfontyyy icon-jineng">职业技能</h3>
-                <h4>HTML&CSS</h4>
-        		<span>
-遵循 W3C 规范，写出规范化、语义化的代码，熟悉掌握<strong>HTML(5)</strong>和常用<strong>CSS(3)</strong>,具有像素还原设计稿能力。熟悉 <strong>盒模型、浮动，定位，BFC</strong> 等概念。熟悉<strong>响应式</strong>和 <strong>flex</strong> 布局</span>
-                <h4>JavaScript&jQuery</h4>
-                <span>熟悉原生 JS 和 jQuery,利用 JS 和 jQery 实现常见效果，能够不依赖库手写 tab 切换、轮播、
-瀑布流布局、懒加载 等效果。掌握<strong>事件模型、DOM 操作、ajax、jsonp、闭包、
-原型链、面向对象、封装</strong>等知识</span>
-                <h4>框架&工具</h4>
-                <span>熟练使用 <strong>sublime、Git、Node.js</strong>  命令行等开发工具。</span>
-                <span>熟悉 <strong>requirejs、gulp 、webpack </strong>等前端构建工具，打包代码和实现代码的模块化。</span>
-                <span>熟悉<strong>BootStrap</strong> 的基本用法。</span>
-                <span>了解掌握<strong>Chrome开发者工具</strong>和<strong>Firebug</strong>，可快速寻找bug。</span>
-        	</div>	
-            <div class="demo">
-                <h3 class="iconfontyyy icon-xiangmu">项目作品</h3>
-                <h4>一个互联网企业站</h4>
-                <span>使用技术：HTML5、CSS3、jQuery、BootStrap</span>
-                <span>地址: <a href="https://xsnowholy.github.io/jirengu/仿站/ronyon/" target="_blank">https://xsnowholy.github.io/jirengu/仿站/ronyon/</a></span>
-                <h4>一个漫画作品介绍网站</h4>
-                <span>使用技术：HTML5、CSS3、jQuery、requireJs、媒体查询</span>
-                <span>地址: <a href="https://xsnowholy.github.io/jirengu/jojo/" target="_blank">https://xsnowholy.github.io/jirengu/jojo/</a></span>
-                <h4>一个商城首页</h4>
-                <span>使用技术：HTML5、CSS3、jQuery</span>
-                <span>地址: <a href="https://xsnowholy.github.io/jirengu/雷姆首页" target="_blank">https://xsnowholy.github.io/jirengu/雷姆首页</a></span>
-                <h4>一些jQuery效果实例</h4>
-                <span>使用技术：HTML5、CSS3动画效果、jQuery 、媒体查询</span>
-                <span>地址: <a href="https://xsnowholy.github.io/jirengu/jQuery-showreel" target="_blank">https://xsnowholy.github.io/jirengu/jQuery-showreel</a></span>
-            </div>
-        </div>
+		<div class="main">
+			<div class="self-assessment">
+				<h3 class="iconfontyyy icon-evaluate">自我评价</h3>
+				<span>乐观开朗，积极向上。学习能力强，喜欢挑战，喜欢接受新事物，具有责任心，和团队 意识，具有良好的沟通能力。热爱前端。
+				</span>
+			</div>
+			<div class="work">
+				<h3 class="iconfontyyy icon-gongzuo">工作经验</h3>
+				<li>
+					<h4>前端开发</h4>
+					<h4>北大医信-广州健迅科技有限公司</h4>
+					<span>2017-08~至今</span>
+					<p>1.主要负责广东省人民医院新版本微信公众号web项目的前端开发</p>
+					<p>2.负责广东省人民医院的旧版本微信公众号web项目的前端部分维护与解决bug</p>
+					<p>3.公司的医院综合服务平台统计功能模块开发（使用ECharts开发可视化统计功能）</p>
+					<p>4.负责中山眼科中心的微信公众号web项目前端开发</p>
+				</li>
+				<li>
+					<h4>前端开发</h4>
+					<h4>广州铭扬影视传媒公司</h4>
+					<span>2016-08~2017-06</span>
+					<span>负责公司官网前端开发和后台维护</span>
+				</li>
+			</div>
+			<div class="skill">
+				<h3 class="iconfontyyy icon-jineng">职业技能</h3>
+				<h4>HTML&CSS</h4>
+				<span>
+					遵循 W3C 规范，写出规范化、语义化的代码，熟悉掌握
+					<strong>HTML(5)</strong>和常用
+					<strong>CSS(3)</strong>,具有像素还原设计稿能力。熟悉
+					<strong>盒模型、浮动，定位，BFC</strong> 等概念。熟悉
+					<strong>响应式</strong>和
+					<strong>flex</strong> 布局</span>
+				<h4>JavaScript&jQuery</h4>
+				<span>熟悉原生 JS 和 jQuery,利用 JS 和 jQery 实现常见效果，能够不依赖库手写 tab 切换、轮播、 瀑布流布局、懒加载 等效果。掌握
+					<strong>事件模型、DOM 操作、ajax、jsonp、闭包、 原型链、面向对象、封装
+					</strong>等知识</span>
+				<h4>框架&工具</h4>
+				<span>熟悉
+						<strong>Vue</strong>开发，使用 <strong>Vue全家桶</strong> 开发过移动端微信公众号项目，熟练使用
+						<strong>Vux</strong>组件库构建前端UI界面， 以及使用<strong>Axios</strong> HTTP库处理与后台的数据交互。</span>
+				<span>熟练使用
+					<strong>sublime、Git、Node.js</strong> 命令行等开发工具。</span>
+				<span>熟悉
+					<strong>requirejs、gulp 、webpack </strong>等前端构建工具，打包代码和实现代码的模块化。</span>
+				<span>熟悉
+					<strong>BootStrap</strong> 的基本用法。</span>
+				<span>了解掌握
+					<strong>Chrome开发者工具</strong>和
+					<strong>Firebug</strong>，可快速寻找bug。</span>
+			</div>
+			<div class="demo">
+				<h3 class="iconfontyyy icon-xiangmu">项目作品</h3>
+				<h4>广东省人民医院微信公众号</h4>
+				<span>使用技术: Vue2 + axios + Vux + Less</span>
+				<span>该项目是基于微信公众号的移动端Web应用， 使用 Vue2 + axios + Vux + Less 搭建的 前后端分离 + RESTful API + SPA 的医院综合服务系统。 项目前端UI框架使用Vux， 实现组件按需加载，使用vue-router
+					修改动态路由，路由组件按需加载，加快首屏加载速度。 通过封装axios做数据请求统一处理，与后端进行数据交互， 实现了大量的前后端分离，以及复杂的业务逻辑。</span>
+				<h4>一个互联网企业站</h4>
+				<span>使用技术：HTML5、CSS3、jQuery、BootStrap</span>
+				<span>地址:
+					<a href="https://xsnowholy.github.io/jirengu/仿站/ronyon/" target="_blank">https://xsnowholy.github.io/jirengu/仿站/ronyon/</a>
+				</span>
+				<!-- <h4>一个漫画作品介绍网站</h4>
+				<span>使用技术：HTML5、CSS3、jQuery、requireJs、媒体查询</span>
+				<span>地址:
+					<a href="https://xsnowholy.github.io/jirengu/jojo/" target="_blank">https://xsnowholy.github.io/jirengu/jojo/</a>
+				</span> -->
+				<h4>一个商城首页</h4>
+				<span>使用技术：HTML5、CSS3、jQuery</span>
+				<span>地址:
+					<a href="https://xsnowholy.github.io/jirengu/雷姆首页" target="_blank">https://xsnowholy.github.io/jirengu/雷姆首页</a>
+				</span>
+				<h4>一些jQuery效果实例</h4>
+				<span>使用技术：HTML5、CSS3动画效果、jQuery 、媒体查询</span>
+				<span>地址:
+					<a href="https://xsnowholy.github.io/jirengu/jQuery-showreel" target="_blank">https://xsnowholy.github.io/jirengu/jQuery-showreel</a>
+				</span>
+			</div>
+		</div>
 	</div>
 </body>
+
 </html>
