refactor: 二维码去除

--- a/resume/index.html
+++ b/resume/index.html
@@ -39,12 +39,12 @@
 					<span>
 						<a href="http://www.jianshu.com/u/6072afe3db37" target="_blank">简书地址</a>
 					</span>
-					<div class="quick-mark">
+					<!-- <div class="quick-mark">
 						<span class="xinxi-title">博客二维码: </span>
 						<span>
 							<embed class="qr-code" src="images/my-jianshu.svg" type="">
 						</span>
-					</div>
+					</div> -->
 				</div>
 				<div class="contact">
 					<div class="adorn">
