简历优化，新增中山眼科项目经历，新增小程序二维码

--- a/resume/index.html
+++ b/resume/index.html
@@ -18,13 +18,15 @@
 					<img src="./images/logo.png">
 				</div>
 				<h2>赖文斌</h2>
-				<p>求职意向：web 前端开发</p>
+				<p>应聘岗位：web前端工程师</p>
 			</div>
 			<div class="content">
 				<div class="information">
 					<div class="adorn">
 						<h2 class="iconfontyyy icon-xinxi">基本信息</h2>
 					</div>
+					<span class="xinxi-title">工作年限：</span>
+					<span>一年半</span>
 					<span class="xinxi-title">学历：</span>
 					<span>大专</span>
 					<span class="xinxi-title">年龄：</span>
@@ -53,22 +55,14 @@
 					<span class="iconfontyyy icon-phone">13250281210</span>
 					<span class="iconfontyyy icon-youxiang">495904127@qq.com</span>
 					<span class="iconfontyyy icon-weixin-copy">SkyBin666</span>
-					<span class="iconfontyyy icon-address">广州市荔湾区</span>
 				</div>
 				<div class="hobby clearfix">
 					<div class="adorn">
-						<h2 class="iconfontyyy icon-techangaihao">主修课程</h2>
+						<h2 class="iconfontyyy icon-techangaihao">小程序简历</h2>
 					</div>
-					<ul class="course clearfix">
-						<li>C语言</li>
-						<li>PS图像处理</li>
-						<li>HTML + CSS</li>
-						<li>JavaScript</li>
-						<li>计算机网络基础</li>
-						<li>MySql数据库</li>
-						<li>PHP程序设计</li>
-						<li>Linux操作系统</li>
-					</ul>
+					<div class="mini-resume">
+						<img src="./images/mini-resume.jpg" alt="">
+					</div>
 				</div>
 			</div>
 		</div>
@@ -80,21 +74,15 @@
 			</div>
 			<div class="work">
 				<h3 class="iconfontyyy icon-gongzuo">工作经验</h3>
-				<li>
-					<h4>前端开发</h4>
-					<h4>北大医信-广州健迅科技有限公司</h4>
-					<span>2017-08~至今</span>
-					<p>1.主要负责广东省人民医院新版本微信公众号web项目的前端开发</p>
-					<p>2.负责广东省人民医院的旧版本微信公众号web项目的前端部分维护与解决bug</p>
-					<p>3.公司的医院综合服务平台统计功能模块开发（使用ECharts开发可视化统计功能）</p>
-					<p>4.负责中山眼科中心的微信公众号web项目前端开发</p>
-				</li>
-				<li>
-					<h4>前端开发</h4>
-					<h4>广州铭扬影视传媒公司</h4>
-					<span>2016-08~2017-06</span>
-					<span>负责公司官网前端开发和后台维护</span>
-				</li>
+				<div>
+					<h4>北大医信-广州健迅科技有限公司(2017-08~至今)</h4>
+					<div class="work-content">
+						<p>1.主要负责广东省人民医院新版本微信公众号web项目的前端开发</p>
+						<p>2.负责广东省人民医院的旧版本微信公众号web项目的前端部分维护与解决bug</p>
+						<p>3.公司的医院综合服务平台统计功能模块开发（使用ECharts开发可视化统计功能）</p>
+						<p>4.负责中山眼科中心的微信公众号web项目前端开发</p>
+					</div>
+				</div>
 			</div>
 			<div class="skill">
 				<h3 class="iconfontyyy icon-jineng">职业技能</h3>
@@ -112,8 +100,11 @@
 					</strong>等知识</span>
 				<h4>框架&工具</h4>
 				<span>熟悉
-						<strong>Vue</strong>开发，使用 <strong>Vue全家桶</strong> 开发过移动端微信公众号项目，熟练使用
-						<strong>Vux</strong>组件库构建前端UI界面， 以及使用<strong>Axios</strong> HTTP库处理与后台的数据交互。</span>
+					<strong>Vue</strong>开发，使用
+					<strong>Vue全家桶</strong> 开发过移动端微信公众号项目，熟练使用
+					<strong>Vux</strong>组件库构建前端UI界面， 以及使用
+					<strong>Axios</strong> HTTP库处理与后台的数据交互。</span>
+				<span>了解<strong>小程序开发</strong>，开发过个人简历小程序（已上线）</span>
 				<span>熟练使用
 					<strong>sublime、Git、Node.js</strong> 命令行等开发工具。</span>
 				<span>熟悉
@@ -126,6 +117,9 @@
 			</div>
 			<div class="demo">
 				<h3 class="iconfontyyy icon-xiangmu">项目作品</h3>
+				<h4>中山大学中山眼科中心微信公众号（已上线）</h4>
+				<span>使用技术: Vue2 + axios + Vux + Less</span>
+				<span>本项目是一个医院在线预约挂号缴费的微信公众号webApp， 使用vue+webpack构建的单页面应用，项目采用vuex、vue-route、axios以及ES6语法，采用组件化思想搭建整个项目，从而使组件高度复用，代码十分简洁。</span>
 				<h4>广东省人民医院微信公众号</h4>
 				<span>使用技术: Vue2 + axios + Vux + Less</span>
 				<span>该项目是基于微信公众号的移动端Web应用， 使用 Vue2 + axios + Vux + Less 搭建的 前后端分离 + RESTful API + SPA 的医院综合服务系统。 项目前端UI框架使用Vux， 实现组件按需加载，使用vue-router
@@ -135,15 +129,15 @@
 				<span>地址:
 					<a href="https://xsnowholy.github.io/jirengu/仿站/ronyon/" target="_blank">https://xsnowholy.github.io/jirengu/仿站/ronyon/</a>
 				</span>
-				<!-- <h4>一个漫画作品介绍网站</h4>
-				<span>使用技术：HTML5、CSS3、jQuery、requireJs、媒体查询</span>
-				<span>地址:
-					<a href="https://xsnowholy.github.io/jirengu/jojo/" target="_blank">https://xsnowholy.github.io/jirengu/jojo/</a>
-				</span> -->
 				<h4>一个商城首页</h4>
 				<span>使用技术：HTML5、CSS3、jQuery</span>
 				<span>地址:
 					<a href="https://xsnowholy.github.io/jirengu/雷姆首页" target="_blank">https://xsnowholy.github.io/jirengu/雷姆首页</a>
+				</span>
+				<h4>一个漫画作品介绍网站</h4>
+				<span>使用技术：HTML5、CSS3、jQuery、requireJs、媒体查询</span>
+				<span>地址:
+					<a href="https://xsnowholy.github.io/jirengu/jojo/" target="_blank">https://xsnowholy.github.io/jirengu/jojo/</a>
 				</span>
 				<h4>一些jQuery效果实例</h4>
 				<span>使用技术：HTML5、CSS3动画效果、jQuery 、媒体查询</span>
