新增简书二维码，隐藏jq项目

--- a/resume/index.html
+++ b/resume/index.html
@@ -38,9 +38,12 @@
 						<a href="https://github.com/XSnowHoly" target="_blank">https://github.com/XSnowHoly</a>
 					</span>
 					<span class="xinxi-title">个人博客: </span>
-					<span>
+					<div class="jianshu-box">
+						<img class="jianshu-code" src="./images/jianshu.png" alt="">
+					</div>
+					<!-- <span>
 						<a href="http://www.jianshu.com/u/6072afe3db37" target="_blank">简书地址</a>
-					</span>
+					</span> -->
 					<!-- <div class="quick-mark">
 						<span class="xinxi-title">博客二维码: </span>
 						<span>
@@ -139,11 +142,11 @@
 				<span>地址:
 					<a href="https://xsnowholy.github.io/jirengu/jojo/" target="_blank">https://xsnowholy.github.io/jirengu/jojo/</a>
 				</span>
-				<h4>一些jQuery效果实例</h4>
+				<!-- <h4>一些jQuery效果实例</h4>
 				<span>使用技术：HTML5、CSS3动画效果、jQuery 、媒体查询</span>
 				<span>地址:
 					<a href="https://xsnowholy.github.io/jirengu/jQuery-showreel" target="_blank">https://xsnowholy.github.io/jirengu/jQuery-showreel</a>
-				</span>
+				</span> -->
 			</div>
 		</div>
 	</div>
