--- a/resume/index.html
+++ b/resume/index.html
@@ -135,12 +135,16 @@
 				<h4>中山大学中山眼科中心微信公众号（已上线）</h4>
 				<span>使用技术: Vue2 + axios + Vux + Less</span>
 				<span>本项目是一个医院在线预约挂号缴费的微信公众号webApp，
-					使用vue+webpack构建的单页面应用，项目采用vuex、vue-route、axios以及ES6语法，采用组件化思想搭建整个项目，从而使组件高度复用，代码十分简洁。</span>
+					使用<strong> vue+webpack </strong>构建的单页面应用，项目采用<strong>vuex、vue-route、axios</strong>以及 <strong>ES6</strong> 语法，采用组件化思想搭建整个项目，从而使组件高度复用，代码十分简洁。</span>
 				<h4>广东省人民医院微信公众号（已上线）</h4>
 				<span>使用技术: Vue2 + axios + Vuex + Vux + Less</span>
-				<span>该项目是基于微信公众号的移动端Web应用， 使用 Vue2 + axios + Vux + Less 搭建的 前后端分离 + RESTful API + SPA 的医院综合服务系统。 项目前端UI框架使用Vux，
-					实现组件按需加载，使用vue-router
-					修改动态路由，路由组件按需加载，加快首屏加载速度。 通过封装axios做数据请求统一处理，与后端进行数据交互， 实现了大量的前后端分离，以及复杂的业务逻辑。</span>
+				<span>该项目是基于微信公众号的移动端Web应用， 使用 <strong> Vue2 + axios + Vux + Less </strong> 搭建的 前后端分离 + SPA 的医院综合服务系统。 项目前端UI框架使用Vux，
+					实现组件按需加载，使用<strong>vue-router</strong> 管理项目路由，路由组件按需加载，加快首屏加载速度。 通过封装 <strong>axios</strong> 做数据请求统一处理，与后端进行数据交互， 实现了大量的前后端分离，以及复杂的业务逻辑。</span>
+				<h4>互联网健康平台</h4>
+				<span>使用技术: Vue2 + axios + Vuex + Vux + Less</span>
+				<span>该项目是基于微信公众号的医院在线诊疗项目， 主要功能有在线图文问诊，在线续方，在线查看患者处方，在线支付处方，查看物流。
+					本项目使用 <strong>微信 JS-SDK</strong> 来实现患者使用在线续方功能前的人脸识别功能。 使用<strong> Vuex </strong>管理整个项目的数据状态，利用<strong> vuex-persistedstate </strong>来解决项目的数据持久化问题。
+				</span>
 				<!-- <h4>一个互联网企业站</h4>
 				<span>使用技术：HTML5、CSS3、jQuery、BootStrap</span>
 				<span>地址:
@@ -155,7 +159,7 @@
 				<span>使用技术：HTML5、CSS3、jQuery、requireJs、媒体查询</span>
 				<span>地址:
 					<a href="https://xsnowholy.github.io/jirengu/jojo/" target="_blank">https://xsnowholy.github.io/jirengu/jojo/</a> -->
-				</span>
+				<!-- </span> -->
 				<!-- <h4>一些jQuery效果实例</h4>
 				<span>使用技术：HTML5、CSS3动画效果、jQuery 、媒体查询</span>
 				<span>地址:
