--- a/resume/index.html
+++ b/resume/index.html
@@ -27,12 +27,12 @@
 					</div>
 					<span class="xinxi-title">工作年限：</span>
 					<span>一年半</span>
-					<span class="xinxi-title">学历：</span>
-					<span>大专</span>
-					<span class="xinxi-title">年龄：</span>
-					<span>22</span>
+					<span class="xinxi-title">学校：</span>
+					<span>广州南洋理工学院</span>
 					<span class="xinxi-title">专业：</span>
 					<span>计算机应用技术</span>
+					<span class="xinxi-title">年龄：</span>
+					<span>22</span>
 					<span class="xinxi-title">Github: </span>
 					<span>
 						<a href="https://github.com/XSnowHoly" target="_blank">https://github.com/XSnowHoly</a>
