--- a/resume/index.html
+++ b/resume/index.html
@@ -33,7 +33,7 @@
 					<span class="xinxi-title">专业：</span>
 					<span>计算机应用技术</span>
 					<span class="xinxi-title">年龄：</span>
-					<span>22</span>
+					<span>23</span>
 					<span class="xinxi-title">Github: </span>
 					<span>
 						<a href="https://github.com/XSnowHoly" target="_blank">https://github.com/XSnowHoly</a>
@@ -106,7 +106,7 @@
 					使用<strong> Vux </strong>构建移动端前端UI界面，
 					使用<strong> Element </strong>构建PC端前端UI界面, 以及使用
 					<strong> Axios </strong> HTTP库处理与后台的数据交互。</span>
-				<span>了解<strong>小程序开发</strong>，开发过个人简历小程序（已上线）</span>
+				<span>了解<strong>小程序开发</strong>，开发过个人简历小程序（已上线），使用过 <strong>MpVue框架</strong> 开发过医院小程序项目 </span>
 				<span>熟练使用
 					<strong>VS Code、Sublime、Git、Node.js</strong> 命令行等开发工具。</span>
 				<span>熟悉
