样式间距调整

--- a/resume/index.html
+++ b/resume/index.html
@@ -136,9 +136,11 @@
 				<div class="demo-item">
 					<h4>中山大学中山眼科中心微信公众号（已上线）</h4>
 					<span>使用技术: Vue2 + axios + Vux + Less</span>
-					<span>本项目是一个医院在线预约挂号缴费的微信公众号webApp，
-						使用<strong> vue+webpack </strong>构建的单页面应用，项目采用<strong>vuex、vue-route、axios</strong>以及
-						<strong>ES6</strong> 语法，采用组件化思想搭建整个项目，从而使组件高度复用，代码十分简洁。</span>
+					<div class="demo-detail">
+						<span>本项目是一个医院在线预约挂号缴费的微信公众号webApp，
+							使用<strong> vue+webpack </strong>构建的单页面应用，项目采用<strong>vuex、vue-route、axios</strong>以及
+							<strong>ES6</strong> 语法，采用组件化思想搭建整个项目，从而使组件高度复用，代码十分简洁。</span>
+					</div>
 					<div class="qrcode-box">
 						<span>扫描二维码浏览项目:</span>
 						<img src="images/qrcode_yk.jpg" alt="">
@@ -147,10 +149,12 @@
 				<div class="demo-item">
 					<h4>广东省人民医院微信公众号（已上线）</h4>
 					<span>使用技术: Vue2 + axios + Vuex + Vux + Sass</span>
-					<span>该项目是基于微信公众号的移动端Web应用， 使用 <strong> Vue2 + axios + Vux + Sass </strong> 搭建的 前后端分离 + SPA
-						的医院综合服务系统。 项目前端UI框架使用Vux，
-						实现组件按需加载，使用<strong>vue-router</strong> 管理项目路由，路由组件按需加载，加快首屏加载速度。 通过封装 <strong>axios</strong>
-						做数据请求统一处理，与后端进行数据交互， 实现了大量的前后端分离，以及复杂的业务逻辑。</span>
+					<div class="demo-detail">
+						<span>该项目是基于微信公众号的移动端Web应用， 使用 <strong> Vue2 + axios + Vux + Sass </strong> 搭建的 前后端分离 + SPA
+							的医院综合服务系统。 项目前端UI框架使用Vux，
+							实现组件按需加载，使用<strong>vue-router</strong> 管理项目路由，路由组件按需加载，加快首屏加载速度。 通过封装 <strong>axios</strong>
+							做数据请求统一处理，与后端进行数据交互， 实现了大量的前后端分离，以及复杂的业务逻辑。</span>
+					</div>
 					<div class="qrcode-box">
 						<span>扫描二维码浏览项目:</span>
 						<img src="images/qrcode_syt.jpg" alt="">
@@ -160,7 +164,8 @@
 					<h4>互联网健康平台（小程序）</h4>
 					<span>使用技术: MpVue + VantUI + Flyio + vuex </span>
 					<span>该项目是一个医院在线诊疗微信小程序项目， 主要功能有在线图文问诊，在线续方，在线查看患者处方，在线支付处方，查看物流。
-						使用小程序第三方UI框架 <strong>VantUI</strong> 构建前端UI界面，使用 <strong>mpvue-entry</strong> 集中式页面配置，自动生成各页面的入口文件，优化目录结构。通过数据请求封装
+						使用小程序第三方UI框架 <strong>VantUI</strong> 构建前端UI界面，使用 <strong>mpvue-entry</strong>
+						集中式页面配置，自动生成各页面的入口文件，优化目录结构。通过数据请求封装
 						<strong>Flyio</strong> 统一管理http请求。 使用<strong> Vuex
 						</strong>管理整个项目的数据状态，利用<strong> vuex-persistedstate </strong>来解决项目的数据持久化问题。
 					</span>
